# wateringtime

./: .gitignore  README.rst  requirements.txt  setup.cfg  wateringtime.yaml.sample
wateringtime/: cal.py  cli.py  program.py  simple.py
