[metadata]
name = wateringtime
summary = Display Watering Times from Sprinkler Settings
description-file =
    README.rst
author = Doug Hellmann
author-email = doug@doughellmann.com
home-page = http://github.com/dhellmann/wateringtime
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages =
    wateringtime

[entry_points]
console_scripts =
    wateringtime = wateringtime.cli:main
